# myapp

./: .gitignore  README.md  local.properties  settings.gradle
mobile/: build.gradle
mobile/src/main/: AndroidManifest.xml
mobile/src/main/assets/: yolo_v4_tiny.tflite
mobile/src/main/cpp/: CMakeLists.txt  NativeLib.cpp  app.cc  ipc_socket.cc  offline.cc  online.cc  preprocessor.cc  scheduler.cc
mobile/src/main/cpp/include/: app.h  ipc_socket.h  monitor.h  preprocessor.h  scheduler.h
mobile/src/main/java/com/example/myapp/: CustomVideo.java  MainActivity.java  NativeLib.java
mobile/src/main/res/layout/: simple_spinner_item_white.xml
mobile/src/main/res/values/: themes.xml
mobile/src/main/res/values-night/: themes.xml
